Minefield Board Initialiser Complete

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <!-- <img src="./assets/minefield.png" alt="Minefield" width="300" /> -->
     <h1>MINESWEEPER</h1>
     <section id="command">
-      <h2 id="message">Message</h2>
+      <h2 id="message">Click to Begin :)</h2>
       <button id="reset">Reset</button>
     </section>
-    <section id="game">
-      <button class="btn-difficulty" data-label="Easy">
+    <section id="btn-section">
+      <button class="btn-difficulty" data-label="easy">
         😊<br />
         <p>9x9 grid (10 bombs)</p>
         Easy
       </button>
-      <button class="btn-difficulty" data-label="Medium">
+      <button class="btn-difficulty" data-label="medium">
         😎<br />
         <p>15x15 grid (40 bombs)</p>
         Medium
       </button>
-      <button class="btn-difficulty" data-label="Hard">
+      <button class="btn-difficulty" data-label="hard">
         🧠<br />
         <p>30x30 grid (180 bombs)</p>
         Hard
