--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section id="command">
       <h2 id="message">Click to Begin :)</h2>
       <button id="reset">Reset</button>
+      <button id="new">New Board</button>
     </section>
     <section id="btn-section">
       <button class="btn-difficulty" data-label="easy">
