Lose Condition considered

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>MINESWEEPER</h1>
     <i class="fa-solid fa-bomb"></i>
     <section id="command">
-      <h2 id="message">Click to Begin :)</h2>
+      <h2 id="message"></h2>
       <button id="reset">Reset</button>
       <button id="new">New Board</button>
     </section>
