Win Condition included :)

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <!-- <img src="./assets/minefield.png" alt="Minefield" width="300" /> -->
-    <h1>MINESWEEPER</h1>
-    <i class="fa-solid fa-bomb"></i>
+    <h1>MINESWEEPER <span class="fa-solid fa-bomb"></span></h1>
+
     <section id="command">
       <h2 id="message"></h2>
       <button id="reset">Reset</button>
-      <button id="new">New Board</button>
+      <button id="new"></button>
     </section>
     <section id="btn-section">
       <button class="btn-difficulty" data-label="easy">
