Flag Feature Complete: pending touch up on stat board

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/toggleButton.css" />
     <script type="module" src="./game/minesweeper/mSwprController.ts"></script>
     <link
       rel="stylesheet"
@@ -24,12 +25,24 @@
             <span class="fa-solid fa-arrows-rotate"></span>
           </button>
         </div>
-        <div>
+        <div id="stats-bar">
           <h4 id="stats"></h4>
-          <button id="flag" data-in="emoji" aria-label="flag">
+          <!-- <button id="flag" data-in="emoji" aria-label="flag">
             <span class="fa-solid fa-flag"></span>
-          </button>
-        </div>
+          </button> -->
+          <div class="toggle-cont">
+            <input
+              type="checkbox"
+              id="flag-state"
+              class="toggle-input"
+              name="flag-state"
+            />
+            <label for="flag-state" class="toggle-label">
+              <div class="toggle-thumb">
+                <span class="toggle-icon"></span>
+              </div>
+            </label>
+          </div>
       </section>
       <section id="btn-section">
         <button class="btn-difficulty" data-label="baby">
