--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/toggleButton.css" />
+    <link rel="stylesheet" href="./css/toggleSwitch.css" />
     <script type="module" src="./game/minesweeper/mSwprController.ts"></script>
     <link
       rel="stylesheet"
@@ -18,19 +18,19 @@
       <h1>MINESWEEPER <span class="fa-solid fa-bomb"></span></h1>
 
       <section id="command">
-        <div>
+        <div id="control">
           <h2 id="message"></h2>
           <button id="reset">Reset</button>
-          <button id="new" data-in="emoji" aria-label="new-board">
+          <button id="refresh" data-in="emoji" aria-label="refresh">
             <span class="fa-solid fa-arrows-rotate"></span>
           </button>
         </div>
-        <div id="stats-bar">
-          <h4 id="stats"></h4>
+        <div id="stats">
+          <h4 id="stats-progress"></h4>
           <!-- <button id="flag" data-in="emoji" aria-label="flag">
             <span class="fa-solid fa-flag"></span>
           </button> -->
-          <div class="toggle-cont">
+          <div class="toggle-switch">
             <input
               type="checkbox"
               id="flag-state"
@@ -38,11 +38,13 @@
               name="flag-state"
             />
             <label for="flag-state" class="toggle-label">
-              <div class="toggle-thumb">
+              <div class="toggle-actuator">
                 <span class="toggle-icon"></span>
               </div>
             </label>
           </div>
+          <h4 id="stats-flagged"></h4>
+        </div>
       </section>
       <section id="btn-section">
         <button class="btn-difficulty" data-label="baby">
