Timer Feature Added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
           </div>
           <h4 id="stats-flagged"></h4>
         </div>
+        <div id="timer">
+          <!-- <span class="fa-solid fa-clock"> </span>
+          <h5 id="stats-time">Timer: 00:00</h5> -->
+        </div>
       </section>
+
       <section id="btn-section">
         <button class="btn-difficulty" data-label="baby">
           👶<br />
@@ -69,6 +74,7 @@
           Hard
         </button>
       </section>
+
       <div id="minefield-container">
         <table id="minefield">
           <!-- <tr>
