Deployment bug fixing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script type="module" src="./app.ts"></script>
+    <!-- change for deployment :o -->
+    <script type="module" src="./app.js"></script>
     <title>Minesweeper</title>
   </head>
   <body>
