--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <!-- change for deployment :o -->
-    <script type="module" src="./app.ts"></script>
+    <script type="module" src="./app.js"></script>
     <title>Minesweeper</title>
   </head>
   <body>
